--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,10 @@
         </div>
         <div class="score" id="score">0 монет</div>
         <div class="button-container">
-            <img src="images/staking_button.png" alt="Стейкинг" class="button staking" id="stakingButton">
+            <div class="button-wrapper">
+                <img src="images/staking_button.png" alt="Стейкинг" class="button staking" id="stakingButton">
+                <span id="stakingEarnings" class="transparent-text">0 монет</span>
+            </div>
             <img src="images/clicker_button.png" alt="Кликер" class="button clicker" id="clickerButton">
             <img src="images/pass_button.png" alt="Пасс" class="button pass" id="passButton">
         </div>
@@ -50,6 +53,7 @@
         <div class="staking-modal" id="stakingModal">
             <h2>Стейкинг</h2>
             <p>Заморозьте свои монеты и получайте 10% от суммы в час.</p>
+            <p>Вы застейкали: <span id="stakedAmount">0</span> монет</p>
             <input type="number" id="stakeAmount" placeholder="Введите сумму для стейкинга">
             <button id="stakeButton">Застейкать</button>
             <span class="close" id="closeStakingModal">&times;</span>
@@ -58,7 +62,7 @@
             <h2>Ваш заработок</h2>
             <p>Вы заработали <span id="earnedAmount">0</span> монет.</p>
             <button id="claimEarningsButton">Получить</button>
-            <button id="restakeEarningsButton">Застейкать</button>
+            <span class="earned-animation" id="earnedAnimation">Вы получили <span id="earnedAnimationAmount">0</span> монет!</span>
         </div>
     </div>
     <div class="footer">
