--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
                 <img src="images/staking_button.png" alt="Стейкинг" class="button staking" id="stakingButton">
                 <span id="stakingEarnings" class="transparent-text">0 монет</span>
             </div>
-            <img src="images/clicker_button.png" alt="Кликер" class="button clicker" id="clickerButton">
-            <img src="images/pass_button.png" alt="Пасс" class="button pass" id="passButton">
+            <div class="button-wrapper">
+                <img src="images/clicker_button.png" alt="Кликер" class="button clicker" id="clickerButton">
+            </div>
+            <div class="button-wrapper">
+                <img src="images/pass_button.png" alt="Пасс" class="button pass" id="passButton">
+            </div>
         </div>
         <div class="rank-table" id="rankTable">
             <table>
