--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <h2>Стейкинг</h2>
             <p>Заморозьте свои монеты и получайте 10% от суммы в час.</p>
             <p>Вы застейкали: <span id="stakedAmount">0</span> монет</p>
+            <p>Прибыль в минуту: <span id="stakingProfit">0</span> монет</p>
             <input type="number" id="stakeAmount" placeholder="Введите сумму для стейкинга">
             <button id="stakeButton">Застейкать</button>
             <span class="close" id="closeStakingModal">&times;</span>
