--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h3 id="score">0 монет</h3>
         <button id="clickerButton" class="clicker-button">Кликер</button>
         <button id="passButton" class="pass-button">PASS</button>
-        <button id="stakingButton" class="staking-button">Стейкинг <span id="stakingEarnings">0</span> монет</button>
+        <button id="stakingButton" class="staking-button">
+            Стейкинг <span id="stakingEarnings">0</span> монет
+        </button>
 
         <!-- Модальное окно стейкинга -->
         <div id="stakingModal" class="modal">
