--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
         <div class="modal-content">
             <span class="close" id="closeUpgradeMenu">&times;</span> <!-- Кнопка для закрытия модального окна -->
             <h2>Улучшить кликер</h2> <!-- Заголовок модального окна -->
-            <p>Улучшение стоит 100 монет. После улучшения каждый клик будет приносить вдвое больше монет.</p> <!-- Описание улучшения -->
-            <button id="upgradeClickerButton">Улучшить за 100 монет</button> <!-- Кнопка для улучшения кликера -->
+            <p>Улучшение стоит 10,000 монет. После улучшения каждый клик будет приносить вдвое больше монет.</p> <!-- Описание улучшения -->
+            <button id="upgradeClickerButton">Улучшить за 10,000 монет</button> <!-- Кнопка для улучшения кликера -->
         </div>
     </div>
 
     <!-- Футер с навигацией -->
     <div class="footer">
-        <img src="images/home_icon.png" alt="Домой" id="homeButton"> <!-- Кнопка для перехода на главную страницу -->
-        <img src="images/tasks_icon.png" alt="Задания" id="tasksButton"> <!-- Кнопка для перехода на страницу заданий -->
-        <img src="images/referrals_icon.png" alt="Рефералы" id="referralsButton"> <!-- Кнопка для перехода на страницу рефералов -->
-        <img src="images/wallet_icon.png" alt="Кошелек" id="walletButton"> <!-- Кнопка для перехода на страницу кошелька -->
+        <img src="https://c0.klipartz.com/pngpicture/332/988/gratis-png-icono-de-casa-en-un-circulo-thumbnail.png" alt="Домой" id="homeButton"> <!-- Кнопка для перехода на главную страницу -->
+        <img src="https://w7.pngwing.com/pngs/797/617/png-transparent-computer-icons-task-angle-text-heart.png" alt="Задания" id="tasksButton"> <!-- Кнопка для перехода на страницу заданий -->
+        <img src="https://w7.pngwing.com/pngs/849/177/png-transparent-computer-icons-username-monochrome-human-log-in.png" alt="Рефералы" id="referralsButton"> <!-- Кнопка для перехода на страницу рефералов -->
+        <img src="https://w7.pngwing.com/pngs/205/486/png-transparent-computer-icons-wallet-wallet-angle-text-rectangle.png" alt="Кошелек" id="walletButton"> <!-- Кнопка для перехода на страницу кошелька -->
     </div>
     <script src="scripts.js"></script> <!-- Подключение файла JavaScript -->
 </body>
