--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
 
     <!-- Футер с навигацией -->
     <div class="footer">
-        <img src="https://c0.klipartz.com/pngpicture/332/988/gratis-png-icono-de-casa-en-un-circulo-thumbnail.png" alt="Домой" id="homeButton"> <!-- Кнопка для перехода на главную страницу -->
-        <img src="https://w7.pngwing.com/pngs/797/617/png-transparent-computer-icons-task-angle-text-heart.png" alt="Задания" id="tasksButton"> <!-- Кнопка для перехода на страницу заданий -->
-        <img src="https://w7.pngwing.com/pngs/849/177/png-transparent-computer-icons-username-monochrome-human-log-in.png" alt="Рефералы" id="referralsButton"> <!-- Кнопка для перехода на страницу рефералов -->
-        <img src="https://w7.pngwing.com/pngs/205/486/png-transparent-computer-icons-wallet-wallet-angle-text-rectangle.png" alt="Кошелек" id="walletButton"> <!-- Кнопка для перехода на страницу кошелька -->
+        <img src="https://cdn.icon-icons.com/icons2/936/PNG/512/home_icon-icons.com_73532.png" alt="Домой" id="homeButton"> <!-- Кнопка для перехода на главную страницу -->
+        <img src="https://cdn.icon-icons.com/icons2/3251/PNG/512/tasks_app_regular_icon_202707.png" alt="Задания" id="tasksButton"> <!-- Кнопка для перехода на страницу заданий -->
+        <img src="https://cdn-icons-png.flaticon.com/512/880/880594.png" alt="Рефералы" id="referralsButton"> <!-- Кнопка для перехода на страницу рефералов -->
+        <img src="https://cdn-icons-png.flaticon.com/512/3359/3359235.png" alt="Кошелек" id="walletButton"> <!-- Кнопка для перехода на страницу кошелька -->
     </div>
     <script src="scripts.js"></script> <!-- Подключение файла JavaScript -->
 </body>
