--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         
         <!-- Страница заданий -->
         <div id="tasksPage" class="page">
-            <h2>Задания</h2> <!-- Заголовок страницы заданий -->
+            <div class="task-header">
+                <h2 class="task-title">Задания</h2> <!-- Заголовок страницы заданий -->
+                <img src="https://cdn.icon-icons.com/icons2/3251/PNG/512/tasks_app_regular_icon_202707.png" alt="Иконка заданий" class="task-icon"> <!-- Место для иконки заданий -->
+            </div>
             <ul id="tasksList">
                 <li class="task-item">
                     <span class="task-text">Подписаться на Telegram канал</span>
