--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
                         <li class="referral-item">
                             <img src="avatar1.png" alt="Avatar" class="referral-icon">
                             <span class="referral-name">User1</span>
-                            <span class="referral-income">500 RUB</span>
+                            <span class="referral-income">500 $SCM</span>
                         </li>
                         <li class="referral-item">
                             <img src="avatar2.png" alt="Avatar" class="referral-icon">
                             <span class="referral-name">User2</span>
-                            <span class="referral-income">300 RUB</span>
+                            <span class="referral-income">300 $SCM</span>
                         </li>
                         <li class="referral-item">
                             <img src="avatar3.png" alt="Avatar" class="referral-icon">
                             <span class="referral-name">User3</span>
-                            <span class="referral-income">200 RUB</span>
+                            <span class="referral-income">200 $SCM</span>
                         </li>
                     </ul>
                 </div>
